# Jarvis

./: README.md  docker-compose.yml  main.py  pyproject.toml
ai-service_backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
ai-service_backend/config/: config.yaml
ai-service_backend/tools/: arithmetic_op_tool.py  expense_calculator_tool.py
ai-service_backend/utils/: expense_calculator.py  save_to_document.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Chat.tsx  Loader.tsx  Message.tsx
frontend/src/services/: api.ts  api.tsx
frontend/src/types/: index.ts
